<resources>
    <string name="app_name">logistiq</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_tipo_envio">Seleccione el Tipo de Envío</string>
    <string name="select_punto_origen">Seleccione el Punto de Origen</string>
    <string name="select_punto_destino">Seleccione el Punto de Llegada</string>

    <string-array name="tipos_envio_array">
        <item>Envío Estándar</item>
        <item>Envío Express</item>
        <item>Recojo en Agencia</item>
    </string-array>

    <string-array name="puntos_origen_array">
        <item>Canto Grande</item>
        <item>La Victoria</item>
        <item>Surco</item>
    </string-array>

    <string-array name="puntos_destino_array">
        <item>Av Mexico Co</item>
        <item>San Juan de Lurigancho</item>
        <item>Comas</item>
    </string-array>
    <string name="search_hint">Ingresa la calle, ciudad o distrito</string>
    <string name="agencies">Agencias</string>
    <string name="pro_points">Puntos PRO</string>
    <string name="search_icon_desc">Search Icon</string>
    <string name="clear_icon_desc">Clear Icon</string>
    <string name="main_image_desc">Main Image</string>
    <string name="places_sdk_not_initialized">Error: La API de Google Places no se ha configurado.</string>
    <string name="puntos_pro">Puntos PRO</string>
    <string name="back_button_description">Back button</string>
    <string name="mas_operaciones">Más Operaciones</string>
    <string name="operation_icon_description">Operation icon</string>
</resources>