<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/main_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/img_2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/search_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:background="@color/white">

            <AutoCompleteTextView
                android:id="@+id/search_autocomplete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawablePadding="12dp"
                android:padding="16dp"
                android:hint="@string/search_hint"
                android:textColor="#757575"
                android:popupBackground="@android:color/white"
                app:drawableStartCompat="@drawable/ic_search" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/agencies_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_agencias"
                android:drawablePadding="8dp"
                android:text="@string/agencies"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/pro_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_puntos_pro"
                android:drawablePadding="8dp"
                android:text="@string/puntos_pro"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/btnReturn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:elevation="8dp"
        android:padding="12dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/back"
        app:tint="@android:color/black" />


</FrameLayout>