<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gestion.RateEstimationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:src="@drawable/img_11"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/imageView7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/illustration_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="Package and percent illustration"
                    android:scaleType="fitEnd" />

                <Spinner
                    android:id="@+id/spinner_envio_tipo"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:entries="@array/tipos_envio_array"
                    android:prompt="@string/select_tipo_envio" />

                <TextView
                    android:id="@+id/label_tipo_envio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="-50dp"
                    android:text="Tipo de Envío"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/package_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/outline_deployed_code_24"
                    android:contentDescription="Box Icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="Caja Paquete XXS (15 x 10 x 10 cm)\nPeso máx. 250 gr" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:padding="0dp"
                        android:text="—"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:text="1"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:padding="0dp"
                        android:text="+"
                        android:textColor="@android:color/black" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="16dp" />
                <TextView
                    android:id="@+id/label_origen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Punto de Origen"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="4dp"/>

                <ImageView
                    android:id="@+id/location_icon_start"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/baseline_location_on_24"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/divider1"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="Location Pin Start" />

                <Spinner
                    android:id="@+id/spinner_origen"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:entries="@array/puntos_origen_array"
                    android:prompt="@string/select_punto_origen"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginStart="8dp" />



                <Spinner
                    android:id="@+id/spinner_destino"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:entries="@array/puntos_destino_array" android:prompt="@string/select_punto_destino"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/location_icon_start"
                    app:layout_constraintEnd_toStartOf="@id/route_line_indicator"
                    app:layout_constraintTop_toBottomOf="@id/spinner_origen" />

                <TextView
                    android:id="@+id/label_destino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Punto de Llegada"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@id/spinner_destino"
                    app:layout_constraintTop_toTopOf="@id/spinner_destino"
                    android:layout_marginTop="-16dp"
                    android:layout_marginStart="4dp"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>